[gd_scene load_steps=12 format=2]

[ext_resource path="res://battle/camera/RTS3DCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://battle/camera/InfoLabel.gd" type="Script" id=2]
[ext_resource path="res://battle/camera/ConfigurationPanel.gd" type="Script" id=3]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.75, 0.531605, 0.269531, 1 )

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.423529, 0.45098, 0.47451, 1 )

[sub_resource type="PrismMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.584314, 0.403922, 0.403922, 1 )

[sub_resource type="CylinderMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.627451, 0.611765, 0.341176, 1 )

[node name="Spatial" type="Spatial"]

[node name="Camera" parent="." instance=ExtResource( 1 )]

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 7.06863, 0, 0, 0, 7.06863, 0, 0, 0, 7.06863, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Cube" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0.613412, 3 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Prism" type="MeshInstance" parent="."]
transform = Transform( 1.57587, 0, -0.607515, 0, 1, 0, 1.20528, 0, 0.794309, 2.81214, 0.845921, 3.64135 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="Cylinder" type="MeshInstance" parent="."]
transform = Transform( 0.794309, 0, -0.607515, 0, 1, 0, 0.607515, 0, 0.794309, 0.155452, 0.771111, -2.76694 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="Label" type="Label" parent="."]
margin_right = 191.0
margin_bottom = 42.0
text = "Rotation:"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
target_path = NodePath("../Camera")

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Control"]
self_modulate = Color( 1, 1, 1, 0.298039 )
margin_left = 704.0
margin_top = 64.0
margin_right = 960.0
margin_bottom = 208.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
camera_controller_path = NodePath("../../Camera")

[node name="MovementSpeedLabel" type="Label" parent="Control/Panel"]
margin_left = 8.0
margin_top = 8.0
margin_right = 248.0
margin_bottom = 22.0
text = "Movement Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementSpeed" type="HSlider" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 24.0
margin_right = -8.0
margin_bottom = -160.0
min_value = 1.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementDampingLabel" type="Label" parent="Control/Panel"]
margin_left = 8.0
margin_top = 40.0
margin_right = 248.0
margin_bottom = 54.0
text = "Movement Damping"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovementDamping" type="HSlider" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 56.0
margin_right = -8.0
margin_bottom = -128.0
min_value = 0.01
max_value = 0.99
step = 0.01
value = 0.99
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomSensibilityLabel" type="Label" parent="Control/Panel"]
margin_left = 8.0
margin_top = 72.0
margin_right = 248.0
margin_bottom = 86.0
text = "Zoom Sensibility"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ZoomSensibility" type="HSlider" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 88.0
margin_right = -8.0
margin_bottom = -96.0
min_value = 1.0
max_value = 3.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationSensibilityLabel" type="Label" parent="Control/Panel"]
margin_left = 8.0
margin_top = 104.0
margin_right = 248.0
margin_bottom = 118.0
text = "Rotation Sensibility"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationSensibility" type="HSlider" parent="Control/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 120.0
margin_right = -8.0
margin_bottom = -64.0
min_value = 1.0
max_value = 3.0
step = 0.01
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Control"]
margin_left = 16.0
margin_top = 568.0
margin_right = 69.0
margin_bottom = 588.0
text = "Toggle Move/Rotation(Mobile)"
